[package]
name = "stubborn-io"
version = "0.3.2"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>"]
edition = "2021"
description = "io traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stubborn", "io", "StubbornTcpStream"]
repository = "https://github.com/craftytrickster/stubborn-io"
documentation = "https://docs.rs/stubborn-io"
readme = "README.md"
 
[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
